--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,8 @@
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/ims.iml
+.idea/*
 
 # Sensitive or high-churn files:
 .idea/dataSources/
